--- a/phenotypes/templates/phenotypes/detail.html
+++ b/phenotypes/templates/phenotypes/detail.html
@@ -22,55 +22,7 @@
     </hgroup>
 
 
-    <h3>Datasets</h3>
-
-    <div class="alert alert-warning" role="alert">
-        <strong>Warning:</strong> These data may contain errors.
-        <p>
-            YeastPhenome.org is running in beta version.
-            The data are available for download, but, as of today, we cannot guarantee the absence of errors or code bugs introduced during processing.
-            This warning will be removed after all cross-checks and validations have been completed.
-            In the meantime, please, be careful when using the data.
-        </p>
-    </div>
-
-    {% if object.datasets %}
-    <table id="papersTable" class="tablesorter table table-condensed table-hover" width="100%">
-
-        <thead>
-        <th>Papers</th>
-        <th>Phenotype</th>
-        <th>Conditions</th>
-        <th>Collection</th>
-        <th>Tested mutants</th>
-        <th>Data</th>
-        </thead>
-
-        <tbody>
-        {% for dataset in object.datasets %}
-        <tr>
-            <td>{{ dataset.paper.link_detail|safe }}</td>
-            <td>{{ dataset.phenotype.link_detail|safe }}</td>
-            <td>{{ dataset.conditionset.link_detail|safe }}</td>
-            <td>{{ dataset.collection }}</td>
-            <td>{{ dataset.tested_space|safe }}</td>
-            <td>
-                {% if dataset.has_data_in_db %}
-                <a class="download" href="/data/datasets/{{ dataset.id }}/{{ DOWNLOAD_PREFIX }}_dataset:{{dataset.id}}_data.txt">{{ dataset.data_available|capfirst }}</a>
-                {% else %}
-                <span class="text-muted">{{ dataset.data_available|capfirst }}</span>
-                {% endif %}
-            </td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    {% if USER_AUTH %}
-    <a href="/data/phenotypes/{{ object.id }}/{{ DOWNLOAD_PREFIX }}_phenotype:{{ object.id }}_data.txt">Download data matrix</a>
-    {% endif %}
-
-    {% endif %}
+    {% include "datasets/datasets_table.html" with template='phenotype' %}
 
     {% include "footer.html" %}
 
