Removed link to all papers from contributors page

--- a/papers/templates/papers/contributors.html
+++ b/papers/templates/papers/contributors.html
@@ -9,7 +9,7 @@
 
 <div class="container-fluid"><h1>Contributors</h1>
 
-<p>A special thanks goes to the authors of these <strong>{{ papers_list.count }} <a href="{% url 'papers:all' %}">publications</a></strong> who have provided unpublished versions of their datasets, including raw quantitative data and/or lists of tested genes.</p>
+<p>A special thanks goes to the authors of these <strong>{{ papers_list.count }} publications</strong> who have provided unpublished versions of their datasets, including raw quantitative data and/or lists of tested genes.</p>
 
 {% if papers_list %}
 <table id="papersTable" class="tablesorter table table-condensed" width="100%">
