--- a/templates/head.html
+++ b/templates/head.html
@@ -30,3 +30,13 @@
 {% endif %}
 
 {% endif %}
+
+{% if script_popup %}
+
+<script>
+    function popup(url){
+        window.open(url,'_blank','width=500,height=500,toolbar=0,menubar=0,location=1,status=1,scrollbars=1,resizable=1,left=0,top=0')
+    }
+</script>
+
+{% endif %}
