--- a/conditions/templates/conditions/detail.html
+++ b/conditions/templates/conditions/detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% include "head.html" with JavaScript='tablesorter' %}
+    {% include "head.html" with JavaScript='tablesorter' script_popup=1 %}
     <title>{{ object|capfirst }} / Experimental conditions / {{ SITE_NAME }}</title>
 </head>
 
