--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% include "head.html" with JavaScript='tablesorter' %}
+    {% include "head.html" with JavaScript='tablesorter' script_popup=1 %}
     <title>{{ object }} / Papers / {{ SITE_NAME }}</title>
 </head>
 
