Switched from HTTP to HTTPS as per NCBI updates

--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -20,7 +20,7 @@
             <table class="table">
                 <tr>
                     <th width="20%" scope="row" class="first">Pubmed ID</th>
-                    <td class="first"><a class="external" href="http://www.ncbi.nlm.nih.gov/pubmed/{{ object.pmid }}/">{{ object.pmid }}</a></td>
+                    <td class="first"><a class="external" href="https://www.ncbi.nlm.nih.gov/pubmed/{{ object.pmid }}/">{{ object.pmid }}</a></td>
                 </tr>
                 <tr>
                     <th scope="row">Title</th>
