--- a/datasets/templates/datasets/datasets_table.html
+++ b/datasets/templates/datasets/datasets_table.html
@@ -20,7 +20,7 @@
 <table id="papersTable" class="tablesorter table table-condensed table-hover" width="100%">
 
     <thead>
-    <td><input type="checkbox" onClick="toggle(this)"></td>
+    <td style="text-align: left;"><input type="checkbox" onClick="toggle(this)"></td>
     <th>Papers</th>
     <th>Phenotype</th>
     <th>Conditions</th>
@@ -33,46 +33,41 @@
     <tbody>
     {% for dataset in datasets %}
     <tr>
-        <td><input id="{{ dataset.id }}" type="checkbox" name="{{ dataset.id }}" class="dataset"></td>
+        <td><input id="{{ dataset.id }}" type="checkbox" name="{{ dataset.id }}" class="dataset" {% if not dataset.has_data_in_db %}disabled{% endif %}></td>
         <td class="col-md-2">{{ dataset.paper.link_detail|safe }}</td>
         <td class="col-md-2">{{ dataset.phenotype.link_detail|safe }}</td>
         <td class="col-md-2">{{ dataset.conditionset.link_detail|safe }}</td>
         <td class="col-md-1">{{ dataset.collection }}</td>
+
         <td class="col-md-2">
             {{ dataset.tested_space|safe }}
-            <div class="collapse {{ dataset.id }}">
-                <div class="dataset-details">
-                    <strong>Source:</strong>
+            <br><small>
                     {% if dataset.tested_source.html %}
                     {{ dataset.tested_source.html|safe }}
                     {% else %}
                     unavailable
                     {% endif %}
-                </div>
-            </div>
+            </small>
         </td>
+
         <td class="col-md-2">
             {% if dataset.has_data_in_db %}
-            <a class="download" href="/data/datasets/{{ dataset.id }}/{{ DOWNLOAD_PREFIX }}_dataset_{{dataset.id}}_data.txt">{{ dataset.data_available|capfirst }}</a>
-            {% else %}
-            <span class="text-muted">{{ dataset.data_available|capfirst }}</span>
-            {% endif %}
-            <div class="collapse {{ dataset.id }}">
-                <div class="dataset-details">
-                    <strong>Source:</strong>
+            <span class="text-success available">{{ dataset.data_available|capfirst }}</span>
+                <br><small>
                     {% if dataset.data_source.html %}
                     {{ dataset.data_source.html|safe }}
                     {% else %}
                     unavailable
                     {% endif %}
-                </div>
-            </div>
+                </small>
+            {% else %}
+            <span class="text-muted">{{ dataset.data_available|capfirst }}</span>
+            {% endif %}
         </td>
-        <td class="col-md-1">
+
+        <td>
             {% spaceless %}
-            <a class="collapsible-{{ dataset.id }}" href="#{{ dataset.id }}" data-target=".{{ dataset.id }}" data-toggle="collapse" aria-expanded="false" aria-controls="{{ dataset.id }}">
-                <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-            </a>
+            ~
             {% endspaceless %}
 
             {% if dataset.has_data_in_db and USER_AUTH %}
@@ -117,7 +112,9 @@
 function toggle(source) {
   checkboxes = document.getElementsByClassName('dataset');
   for(var i=0, n=checkboxes.length;i<n;i++) {
-    checkboxes[i].checked = source.checked;
+    if(!checkboxes[i].disabled) {
+        checkboxes[i].checked = source.checked;
+    }
   }
   btn = document.getElementById('dataset_download');
   btn.disabled = !source.checked;
