Fixed small bug

--- a/datasets/templates/datasets/datasets_table.html
+++ b/datasets/templates/datasets/datasets_table.html
@@ -98,6 +98,9 @@
 </form>
 
 
+{% endif %}
+
+
 <script language="JavaScript">
 function toggle(source) {
   checkboxes = document.getElementsByClassName('dataset');
