Fixed link to data download in dataset detail template

--- a/datasets/templates/datasets/detail.html
+++ b/datasets/templates/datasets/detail.html
@@ -72,7 +72,7 @@
                 </tr>
             </table>
 
-            <a class="btn btn-success" role="button" href="/datasets/download/id={{ dataset.id }}">Download</a>
+            <a class="btn btn-success" role="button" href="/datasets/download/?{{ dataset.id }}=on">Download</a>
 
             {% include "footer.html" %}
 
