Fix bug with paper link in dataset table

--- a/datasets/templates/datasets/datasets_table.html
+++ b/datasets/templates/datasets/datasets_table.html
@@ -34,7 +34,7 @@
     {% for dataset in datasets %}
     <tr>
         <td><input id="{{ dataset.id }}" type="checkbox" name="{{ dataset.id }}" class="dataset" {% if not dataset.has_data_in_db %}disabled{% endif %}></td>
-        <td class="col-md-2"><a href="{% url 'papers:detail' dataset.id %}">{{ dataset.paper }}</a></td>
+        <td class="col-md-2"><a href="{% url 'papers:detail' dataset.paper.id %}">{{ dataset.paper }}</a></td>
         <td class="col-md-3">{{ dataset.phenotype.link_detail|safe }}</td>
         <td class="col-md-3">{{ dataset.conditionset.link_detail|safe }}</td>
         <td class="col-md-1">{{ dataset.collection }}</td>
