--- a/papers/templates/zip.html
+++ b/papers/templates/zip.html
@@ -1,1 +1,1 @@
-<a class="btn btn-success" role="button" href="{% url 'papers:download_zip' paper_id=object.pmid paper_pmid=object.pmid %}">Download paper package</a>
+<a class="btn btn-success" role="button" href="{% url 'papers:download_zip' paper_id=object.id paper_pmid=object.pmid %}">Download paper package</a>
