--- a/datasets/templates/datasets/datasets_table.html
+++ b/datasets/templates/datasets/datasets_table.html
@@ -17,50 +17,72 @@
 {% endif %}
 
 <form action="/datasets/download/" method="get">
-<table id="papersTable" class="tablesorter table table-condensed table-hover" width="100%">
+    <table id="papersTable" class="tablesorter table table-condensed table-hover" width="100%">
 
-    <thead>
-    <td style="text-align: left;"><input type="checkbox" onClick="toggle(this)"></td>
-    <th>Papers</th>
-    <th>Phenotype</th>
-    <th>Conditions</th>
-    <th>Collection</th>
-    <th>Tested mutants</th>
-    <th>Data</th>
-    <th>Details</th>
-    </thead>
+        <thead>
+        <td style="text-align: left;"><input type="checkbox" onClick="toggle(this)"></td>
+        <th>Papers</th>
+        <th>Phenotype</th>
+        <th>Conditions</th>
+        <th>Collection</th>
+        <th>Tested mutants</th>
+        <th>Data</th>
+        <th>Details</th>
+        </thead>
 
-    <tbody>
-    {% for dataset in datasets %}
-    <tr>
-        <td><input id="{{ dataset.id }}" type="checkbox" name="{{ dataset.id }}" class="dataset" {# {% if not dataset.has_data_in_db %}disabled{% endif %} #}></td>
-        <td class="col-md-2"><a href="{% url 'papers:detail' object.id %}">{{ object }}</a></td>
-        <td class="col-md-3">{{ dataset.phenotype.observable2.name }} {% if dataset.phenotype.reporter %} ({{ dataset.phenotype.reporter }}) {% endif %}</td>
-        <td class="col-md-3">{{ dataset.conditionset.name }}</td>
-        <td class="col-md-1">{{ dataset.collection.shortname }}</td>
+        <tbody>
+        {% for dataset in datasets %}
+        <tr>
+            <td><input id="{{ dataset.id }}" type="checkbox" name="{{ dataset.id }}" class="dataset" {# {% if not dataset.has_data_in_db %}disabled{% endif %} #}></td>
+            <td class="col-md-2"><a href="{% url 'papers:detail' dataset.paper.id %}">{{ dataset.paper }}</a></td>
+            <td class="col-md-3">{{ dataset.phenotype.observable2.name }} {% if dataset.phenotype.reporter %} ({{ dataset.phenotype.reporter }}) {% endif %}</td>
+            <td class="col-md-3">{{ dataset.conditionset.name }}</td>
+            <td class="col-md-1">{{ dataset.collection.shortname }}</td>
 
-        <td class="col-md-1">
-            {{ dataset.tested_space|safe }}
-        </td>
+            <td class="col-md-1">
+                {{ dataset.tested_space|safe }}
+            </td>
 
-        <td class="col-md-1">
-            {% if dataset.has_data_in_db %}
-            <span class="text-success available">{{ dataset.data_available|capfirst }}</span>
-            {% else %}
-            <span class="text-muted">{{ dataset.data_available|capfirst }}</span>
-            {% endif %}
-        </td>
+            <td class="col-md-1">
+                {% if dataset.has_data_in_db %}
+                <span class="text-success available">{{ dataset.data_available|capfirst }}</span>
+                {% else %}
+                <span class="text-muted">{{ dataset.data_available|capfirst }}</span>
+                {% endif %}
+            </td>
 
-        <td>
-            <a href="/datasets/{{ dataset.id }}/"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span></a>
-        </td>
-    </tr>
+            <td>
+                <a href="/datasets/{{ dataset.id }}/"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span></a>
+            </td>
+        </tr>
 
-    {% endfor %}
-    </tbody>
-</table>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    <button id="dataset_download" type="submit" class="btn btn-default" disabled="true">Download selected datasets</button>
+    {% if datasets.has_other_pages %}
+    <ul class="pagination">
+        {% if datasets.has_previous %}
+        <li><a href="?page={{ datasets.previous_page_number }}">&laquo;</a></li>
+        {% else %}
+        <li class="disabled"><span>&laquo;</span></li>
+        {% endif %}
+        {% for i in datasets.paginator.page_range %}
+        {% if datasets.number == i %}
+        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+        {% else %}
+        <li><a href="?page={{ i }}">{{ i }}</a></li>
+        {% endif %}
+        {% endfor %}
+        {% if datasets.has_next %}
+        <li><a href="?page={{ datasets.next_page_number }}">&raquo;</a></li>
+        {% else %}
+        <li class="disabled"><span>&raquo;</span></li>
+        {% endif %}
+    </ul>
+    {% endif %}
+
+    <p><button id="dataset_download" type="submit" class="btn btn-default" disabled="true">Download selected datasets</button>
 
 </form>
 
