--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    For questions &amp; comments: <a href="mailto:abarysh@princeton.edu" title="We get particularly excited about bug reports.">abarysh@princeton.edu</a>.
+    For questions &amp; comments: <a href="mailto:abaryshnikova@calicolabs.com" title="We get particularly excited about bug reports.">abaryshnikova@calicolabs.com</a>.
 </footer>
